# --------------------------------------------------------------------------------------------------------------------
# Copyright (C) Microsoft Corporation.  All rights reserved.
# --------------------------------------------------------------------------------------------------------------------

set( SOURCES
  run_mission.lua
  to_string_test.lua
)

install( FILES ${SOURCES} DESTINATION Lua_Examples )
